--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" 
+    integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" 
+    crossorigin="anonymous" 
+    referrerpolicy="no-referrer" 
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <header class="header">
-      <a class="header-logo" href=""
-        >Web<span class="header-logo-color">Studio</span></a
-      >
+      <div class="container">
+        <a class="header-logo" href=""
+        >Web<span class="header-logo-color">Studio</span></a>
       <nav>
         <ul class="header-nav">
           <li><a class="header-nav-link-accent" href="">Студія</a></li>
@@ -32,6 +37,8 @@
         >info@devstudio.com</a
       >
       <a class="header-contact" href="tel:+380961111111">+38 096 111 11 11</a>
+      </div>
+      
     </header>
     <main>
       <!-- перша секцiя -->
