--- a/index.html
+++ b/index.html
@@ -11,75 +11,84 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" 
-    integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" 
-    crossorigin="anonymous" 
-    referrerpolicy="no-referrer" 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
+
   <body>
-    <header class="header">
+    <header class="page-header">
       <div class="container">
         <a class="header-logo" href=""
-        >Web<span class="header-logo-color">Studio</span></a>
-      <nav>
-        <ul class="header-nav">
-          <li><a class="header-nav-link-accent" href="">Студія</a></li>
-          <li>
-            <a class="header-nav-link" href="./portfolio.html">Портфоліо</a>
-          </li>
-          <li><a class="header-nav-link" href="">Контакти</a></li>
-        </ul>
-      </nav>
-      <a class="header-contact" href="mailto:info@devstudio.com"
-        >info@devstudio.com</a
-      >
-      <a class="header-contact" href="tel:+380961111111">+38 096 111 11 11</a>
+          >Web<span class="header-logo-color">Studio</span></a
+        >
+        <nav class="nav">
+          <ul class="header-nav">
+            <li><a class="header-nav-link-accent" href="">Студія</a></li>
+            <li><a class="header-nav-link" href="./portfolio.html">Портфоліо</a></li>
+            <li><a class="header-nav-link" href="">Контакти</a></li>
+          </ul>
+        </nav>
+        <a class="header-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="header-contact" href="tel:+380961111111">+38 096 111 11 11</a>
       </div>
-      
     </header>
+
+
     <main>
       <!-- перша секцiя -->
       <section class="main">
-        <h1 class="main-title">Ефективні рішення для вашого бізнесу</h1>
-        <button class="main-btn" type="button">Замовити послугу</button>
+        <div class="container">
+          <h1 class="main-title">Ефективні рішення для вашого бізнесу</h1>
+          <button class="main-btn" type="button">Замовити послугу</button>
+        </div>
       </section>
+
       <!-- друга секцiя -->
       <section>
-        <h2 class="visually-hidden">Нашi переваги</h2>
-        <ul>
-          <li>
-            <h3 class="main-advantage">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="main-advantage-text">
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
-            </p>
-          </li>
-          <li>
-            <h3 class="main-advantage">ПУНКТУАЛЬНІСТЬ</h3>
-            <p class="main-advantage-text">
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
-            </p>
-          </li>
-          <li>
-            <h3 class="main-advantage">ПЛАНУВАННЯ</h3>
-            <p class="main-advantage-text">
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
-          <li>
-            <h3 class="main-advantage">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p class="main-advantage-text">
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
-            </p>
-          </li>
-        </ul>
-        <!-- третя секцiя -->
-        <section>
+        <div class="container">
+          <h2 class="visually-hidden">Нашi переваги</h2>
+          <ul>
+            <li>
+              <h3 class="main-advantage">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="main-advantage-text">
+                Ідейні міркування, і навіть початок повсякденної роботи з
+                формування позиції.
+              </p>
+            </li>
+            <li>
+              <h3 class="main-advantage">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="main-advantage-text">
+                Завдання організації, особливо рамки і місце навчання кадрів
+                тягне у себе.
+              </p>
+            </li>
+            <li>
+              <h3 class="main-advantage">ПЛАНУВАННЯ</h3>
+              <p class="main-advantage-text">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li>
+              <h3 class="main-advantage">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="main-advantage-text">
+                Значимість цих проблем настільки очевидна, що реалізація
+                планових завдань.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- третя секцiя -->
+      <section>
+        <div class="container">
           <h2 class="main-work">Чим ми займаємося</h2>
           <ul>
             <li>
@@ -107,80 +116,87 @@
               />
             </li>
           </ul>
-        </section>
+        </div>
       </section>
+
       <!-- чеверта секцiя -->
       <section>
-        <h2 class="main-team">Наша команда</h2>
-        <ul>
-          <li>
-            <img
-              width="270"
-              height="260"
-              src="./images/photo/igor.jpg"
-              alt="Iгор"
-            />
-            <h3 class="main-team-list">Ігор Дем'яненко</h3>
-            <p class="main-team-text">Product Designer</p>
-          </li>
-          <li>
-            <img
-              width="270"
-              height="260"
-              src="./images/photo/olga.jpg"
-              alt="Ольга"
-            />
-            <h3 class="main-team-list">Ольга Рєпіна</h3>
-            <p class="main-team-text">Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              width="270"
-              height="260"
-              src="./images/photo/nickolai.jpg"
-              alt="Миколай"
-            />
-            <h3 class="main-team-list">Микола Тарасов</h3>
-            <p class="main-team-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              width="270"
-              height="260"
-              src="./images/photo/mikhail.jpg"
-              alt="Михайло"
-            />
-            <h3 class="main-team-list">Михайло Єрмаков</h3>
-            <p class="main-team-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="main-team">Наша команда</h2>
+          <ul>
+            <li>
+              <img
+                width="270"
+                height="260"
+                src="./images/photo/igor.jpg"
+                alt="Iгор"
+              />
+              <h3 class="main-team-list">Ігор Дем'яненко</h3>
+              <p class="main-team-text">Product Designer</p>
+            </li>
+            <li>
+              <img
+                width="270"
+                height="260"
+                src="./images/photo/olga.jpg"
+                alt="Ольга"
+              />
+              <h3 class="main-team-list">Ольга Рєпіна</h3>
+              <p class="main-team-text">Frontend Developer</p>
+            </li>
+            <li>
+              <img
+                width="270"
+                height="260"
+                src="./images/photo/nickolai.jpg"
+                alt="Миколай"
+              />
+              <h3 class="main-team-list">Микола Тарасов</h3>
+              <p class="main-team-text">Marketing</p>
+            </li>
+            <li>
+              <img
+                width="270"
+                height="260"
+                src="./images/photo/mikhail.jpg"
+                alt="Михайло"
+              />
+              <h3 class="main-team-list">Михайло Єрмаков</h3>
+              <p class="main-team-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
+
+    
     <footer class="footer">
-      <a class="footer-logo" href=""
-        >Web<span class="footer-logo-color">Studio</span></a
-      >
-      <address>
-        <ul>
-          <li>
-            <a
-              class="footer-address"
-              href="https://www.google.de/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+02000/@50.4265841,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li>
-            <a class="footer-contact" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="footer-contact" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a class="footer-logo" href=""
+          >Web<span class="footer-logo-color">Studio</span></a
+        >
+        <address>
+          <ul>
+            <li>
+              <a
+                class="footer-address"
+                href="https://www.google.de/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+02000/@50.4265841,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li>
+              <a class="footer-contact" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="footer-contact" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
