--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,8 @@
 </head>
 
 <body>
-    <header class="header">
+    <header class="page-header">
+        <div class="container">
         <a class="header-logo" href="">Web<span class="header-logo-color">Studio</span></a>
         <nav>
             <ul class="list">
@@ -31,7 +32,10 @@
             <li><a class="header-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a class="header-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
+    </div>
     </header>
+   
+   
     <main>
         <section>
             <h1 class="visually-hidden">Нашi роботи</h1>
