--- a/index.html
+++ b/index.html
@@ -51,26 +51,26 @@
       </section>
 
       <!-- друга секцiя -->
-      <section>
+      <section class="main-advantage">
         <div class="container">
           <h2 class="visually-hidden">Нашi переваги</h2>
           <ul>
             <li>
-              <h3 class="main-advantage">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <h3 class="main-advantage-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="main-advantage-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
             <li>
-              <h3 class="main-advantage">ПУНКТУАЛЬНІСТЬ</h3>
+              <h3 class="main-advantage-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="main-advantage-text">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
             <li>
-              <h3 class="main-advantage">ПЛАНУВАННЯ</h3>
+              <h3 class="main-advantage-title">ПЛАНУВАННЯ</h3>
               <p class="main-advantage-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
