--- a/portfolio.html
+++ b/portfolio.html
@@ -22,16 +22,14 @@
         <div class="container">
         <a class="header-logo" href="">Web<span class="header-logo-color">Studio</span></a>
         <nav>
-            <ul class="list">
+            <ul class="header-nav">
                 <li><a class="header-nav-link" href="./index.html">Студія</a></li>
                 <li><a class="header-nav-link-accent" href="">Портфоліо</a></li>
                 <li><a class="header-nav-link" href="">Контакти</a></li>
             </ul>
         </nav>
-        <ul>
-            <li><a class="header-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="header-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
+            <a class="header-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="header-contact" href="tel:+380961111111">+38 096 111 11 11</a>
     </div>
     </header>
    
