--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
             <li><a class="header-nav-link" href="">Контакти</a></li>
           </ul>
         </nav>
-        <a class="header-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="header-contact" href="tel:+380961111111">+38 096 111 11 11</a>
+        <ul class="header-contact">
+          <li><a class="header-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a class="header-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </div>
     </header>
 
