--- a/portfolio.html
+++ b/portfolio.html
@@ -28,8 +28,10 @@
                 <li><a class="header-nav-link" href="">Контакти</a></li>
             </ul>
         </nav>
+        <ul class="header-contact">
             <a class="header-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
             <a class="header-contact" href="tel:+380961111111">+38 096 111 11 11</a>
+        </ul>
     </div>
     </header>
    
