--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
       </section>
 
       <!-- друга секцiя -->
-      <section class="main-advantage">
+      <section class="main-second">
         <div class="container">
           <h2 class="visually-hidden">Нашi переваги</h2>
-          <ul>
+          <ul class="main-advantage">
             <li>
               <h3 class="main-advantage-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="main-advantage-text">
@@ -77,7 +77,7 @@
               </p>
             </li>
             <li>
-              <h3 class="main-advantage">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <h3 class="main-advantage-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="main-advantage-text">
                 Значимість цих проблем настільки очевидна, що реалізація
                 планових завдань.
