section third end

--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
       </section>
 
       <!-- третя секцiя -->
-      <section>
+      <section class="main-third">
         <div class="container">
           <h2 class="main-work">Чим ми займаємося</h2>
-          <ul>
-            <li>
+          <ul class="main-img">
+            <li> 
               <img
                 width="370"
                 height="294"
@@ -121,7 +121,7 @@
       </section>
 
       <!-- чеверта секцiя -->
-      <section>
+      <section class="main-fourth">
         <div class="container">
           <h2 class="main-team">Наша команда</h2>
           <ul>
