section fourth end

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <!-- третя секцiя -->
       <section class="main-third">
         <div class="container">
-          <h2 class="main-work">Чим ми займаємося</h2>
+          <h2 class="main-work-title">Чим ми займаємося</h2>
           <ul class="main-img">
             <li> 
               <img
@@ -123,10 +123,10 @@
       <!-- чеверта секцiя -->
       <section class="main-fourth">
         <div class="container">
-          <h2 class="main-team">Наша команда</h2>
-          <ul>
+          <h2 class="main-team-title">Наша команда</h2>
+          <ul class="main-team">
             <li>
-              <img
+              <img class="main-team-img"
                 width="270"
                 height="260"
                 src="./images/photo/igor.jpg"
@@ -136,7 +136,7 @@
               <p class="main-team-text">Product Designer</p>
             </li>
             <li>
-              <img
+              <img class="main-team-img"
                 width="270"
                 height="260"
                 src="./images/photo/olga.jpg"
@@ -146,7 +146,7 @@
               <p class="main-team-text">Frontend Developer</p>
             </li>
             <li>
-              <img
+              <img class="main-team-img"
                 width="270"
                 height="260"
                 src="./images/photo/nickolai.jpg"
@@ -156,7 +156,7 @@
               <p class="main-team-text">Marketing</p>
             </li>
             <li>
-              <img
+              <img class="main-team-img"
                 width="270"
                 height="260"
                 src="./images/photo/mikhail.jpg"
