--- a/portfolio.html
+++ b/portfolio.html
@@ -34,82 +34,83 @@
         </ul>
     </div>
     </header>
-   
-   
+    
     <main>
-        <section>
-            <h1 class="visually-hidden">Нашi роботи</h1>
-            <ul>
+        <section class="portfolio">
+            <div class="container">
+            <h1 class="portfolio-title">Нашi роботи</h1>
+            <ul class="portfolio-btn">
                 <li><button class="main-btn-portfolio" type="button">Усі</button></li>
                 <li><button class="main-btn-portfolio" type="button">Веб-сайти</button></li>
                 <li><button class="main-btn-portfolio" type="button">Додатки</button></li>
                 <li><button class="main-btn-portfolio" type="button">Дизайн</button></li>
                 <li><button class="main-btn-portfolio" type="button">Маркетинг</button></li>
             </ul>
-            <ul>
+            <ul class="portfolio-work">
                 <li>
                     <a class="projects" href="">
-                    <img width="370" height="294" src="./images/projects/tehno.jpg" alt="Технокряк">
+                    <img class="portfolio-img" width="370" height="294" src="./images/projects/tehno.jpg" alt="Технокряк">
                     <h2 class="main-work-tema">Технокряк</h2>
                     <p class="main-work-text">Веб-сайт</p>
                 </a>
                 </li>
                 <li>
                     <a class="projects" href="">
-                    <img width="370" height="294" src="./images/projects/poster.jpg" alt="Постер">
+                    <img class="portfolio-img" width="370" height="294" src="./images/projects/poster.jpg" alt="Постер">
                     <h2 class="main-work-tema">Постер New Orlean vs Golden Star</h2>
                     <p class="main-work-text">Дизайн</p>
                 </a>
                 </li>
                 <li>
                     <a class="projects" href="">
-                    <img width="370" height="294" src="./images/projects/seafood.jpg" alt="Риба">
+                    <img class="portfolio-img" width="370" height="294" src="./images/projects/seafood.jpg" alt="Риба">
                     <h2 class="main-work-tema">Ресторан Seafood</h2>
                     <p class="main-work-text">Додаток</p>
                 </a>
                 </li>
                 <li>
                     <a class="projects" href="">
-                    <img width="370" height="294" src="./images/projects/prime.jpg" alt="Просто">
+                    <img class="portfolio-img" width="370" height="294" src="./images/projects/prime.jpg" alt="Просто">
                     <h2 class="main-work-tema">Проєкт Prime</h2>
                     <p class="main-work-text">Маркетинг</p>
                 </a>
                 </li>
                     <a class="projects" href="">
-                    <img width="370" height="294" src="./images/projects/boxes.jpg" alt="Коробка">
+                    <img class="portfolio-img" width="370" height="294" src="./images/projects/boxes.jpg" alt="Коробка">
                     <h2 class="main-work-tema">Проєкт Boxes</h2>
                     <p class="main-work-text">Додаток</p>
                 </a>
                 </li>
                 <li>
                     <a class="projects" href="">
-                    <img width="370" height="294" src="./images/projects/borders.jpg" alt="Кордон">
+                    <img class="portfolio-img" width="370" height="294" src="./images/projects/borders.jpg" alt="Кордон">
                     <h2 class="main-work-tema">Inspiration has no Borders</h2>
                     <p class="main-work-text">Веб-сайт</p>
                 </a>
                 </li>
                 <li>
                     <a class="projects" href="">
-                    <img width="370" height="294" src="./images/projects/edition.jpg" alt="Видання">
+                    <img class="portfolio-img" width="370" height="294" src="./images/projects/edition.jpg" alt="Видання">
                     <h2 class="main-work-tema">Видання Limited Edition</h2>
                     <p class="main-work-text">Дизайн</p>
                 </a>
                 </li>
                 <li>
                     <a class="projects" href="">
-                    <img width="370" height="294" src="./images/projects/label.jpg" alt="Етикетка">
+                    <img class="portfolio-img" width="370" height="294" src="./images/projects/label.jpg" alt="Етикетка">
                     <h2 class="main-work-tema">Проєкт LAB</h2>
                     <p class="main-work-text">Маркетинг</p>
                 </a>
                 </li>
                 <li>
                     <a class="projects" href="">
-                    <img width="370" height="294" src="./images/projects/business.jpg" alt="Бiзнес">
+                    <img class="portfolio-img" width="370" height="294" src="./images/projects/business.jpg" alt="Бiзнес">
                     <h2 class="main-work-tema">Growing Business</h2>
                     <p class="main-work-text">Додаток</p>
                 </a>
                 </li>
             </ul>
+        </div>
         </section>
     </main>
     <footer class="footer">
