--- a/index.html
+++ b/index.html
@@ -132,8 +132,10 @@
                 src="./images/photo/igor.jpg"
                 alt="Iгор"
               />
+              <div class="card-wrapper-main">
               <h3 class="main-team-list">Ігор Дем'яненко</h3>
               <p class="main-team-text">Product Designer</p>
+              </div>
             </li>
             <li>
               <img class="main-team-img"
@@ -142,8 +144,10 @@
                 src="./images/photo/olga.jpg"
                 alt="Ольга"
               />
+              <div class="card-wrapper-main">
               <h3 class="main-team-list">Ольга Рєпіна</h3>
               <p class="main-team-text">Frontend Developer</p>
+              </div>
             </li>
             <li>
               <img class="main-team-img"
@@ -152,8 +156,10 @@
                 src="./images/photo/nickolai.jpg"
                 alt="Миколай"
               />
+              <div class="card-wrapper-main">
               <h3 class="main-team-list">Микола Тарасов</h3>
               <p class="main-team-text">Marketing</p>
+              </div>
             </li>
             <li>
               <img class="main-team-img"
@@ -162,8 +168,10 @@
                 src="./images/photo/mikhail.jpg"
                 alt="Михайло"
               />
+              <div class="card-wrapper-main">
               <h3 class="main-team-list">Михайло Єрмаков</h3>
               <p class="main-team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
