--- a/portfolio.html
+++ b/portfolio.html
@@ -50,63 +50,81 @@
                 <li>
                     <a class="projects" href="">
                     <img class="portfolio-img" width="370" height="294" src="./images/projects/tehno.jpg" alt="Технокряк">
+                    <div class="card-wrapper">
                     <h2 class="main-work-tema">Технокряк</h2>
                     <p class="main-work-text">Веб-сайт</p>
-                </a>
+                    </div>
+                    </a>
                 </li>
                 <li>
                     <a class="projects" href="">
                     <img class="portfolio-img" width="370" height="294" src="./images/projects/poster.jpg" alt="Постер">
+                    <div class="card-wrapper">
                     <h2 class="main-work-tema">Постер New Orlean vs Golden Star</h2>
                     <p class="main-work-text">Дизайн</p>
-                </a>
+                    </div>
+                    </a>
                 </li>
                 <li>
                     <a class="projects" href="">
                     <img class="portfolio-img" width="370" height="294" src="./images/projects/seafood.jpg" alt="Риба">
+                    <div class="card-wrapper">
                     <h2 class="main-work-tema">Ресторан Seafood</h2>
                     <p class="main-work-text">Додаток</p>
-                </a>
+                    </div>
+                    </a>
                 </li>
                 <li>
                     <a class="projects" href="">
                     <img class="portfolio-img" width="370" height="294" src="./images/projects/prime.jpg" alt="Просто">
+                    <div class="card-wrapper">
                     <h2 class="main-work-tema">Проєкт Prime</h2>
                     <p class="main-work-text">Маркетинг</p>
-                </a>
+                    </div>
+                    </a>
                 </li>
                     <a class="projects" href="">
                     <img class="portfolio-img" width="370" height="294" src="./images/projects/boxes.jpg" alt="Коробка">
+                    <div class="card-wrapper">
                     <h2 class="main-work-tema">Проєкт Boxes</h2>
                     <p class="main-work-text">Додаток</p>
-                </a>
+                    </div>
+                    </a>
                 </li>
                 <li>
                     <a class="projects" href="">
                     <img class="portfolio-img" width="370" height="294" src="./images/projects/borders.jpg" alt="Кордон">
+                    <div class="card-wrapper">
                     <h2 class="main-work-tema">Inspiration has no Borders</h2>
                     <p class="main-work-text">Веб-сайт</p>
-                </a>
+                    </div>
+                    </a>
                 </li>
                 <li>
                     <a class="projects" href="">
                     <img class="portfolio-img" width="370" height="294" src="./images/projects/edition.jpg" alt="Видання">
+                    <div class="card-wrapper">
                     <h2 class="main-work-tema">Видання Limited Edition</h2>
                     <p class="main-work-text">Дизайн</p>
-                </a>
+                    </div>
+                    </a>
                 </li>
                 <li>
                     <a class="projects" href="">
                     <img class="portfolio-img" width="370" height="294" src="./images/projects/label.jpg" alt="Етикетка">
+                    <div class="card-wrapper">
                     <h2 class="main-work-tema">Проєкт LAB</h2>
                     <p class="main-work-text">Маркетинг</p>
-                </a>
+                    </div>
+                    </a>
                 </li>
                 <li>
                     <a class="projects" href="">
                     <img class="portfolio-img" width="370" height="294" src="./images/projects/business.jpg" alt="Бiзнес">
+                    <div class="card-wrapper">
                     <h2 class="main-work-tema">Growing Business</h2>
                     <p class="main-work-text">Додаток</p>
+                    </div>
                 </a>
                 </li>
             </ul>
