--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
     <main>
         <section class="portfolio">
             <div class="container">
-            <h1 class="portfolio-title">Нашi роботи</h1>
+            <h1 class="visually-hidden">Нашi роботи</h1>
             <ul class="portfolio-btn">
                 <li><button class="main-btn-portfolio" type="button">Усі</button></li>
                 <li><button class="main-btn-portfolio" type="button">Веб-сайти</button></li>
