--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <!-- перша секцiя -->
       <section class="main">
         <div class="container">
-          <h1 class="main-title">Ефективні рішення для вашого бізнесу</h1>
+          <h1 class="main-title">Ефективні рішення для <br/> вашого бізнесу</h1>
           <button class="main-btn" type="button">Замовити послугу</button>
         </div>
       </section>
@@ -185,7 +185,7 @@
           >Web<span class="footer-logo-color">Studio</span></a
         >
         <address>
-          <ul>
+          <ul class="footer-list">
             <li>
               <a
                 class="footer-address"
