--- a/index.html
+++ b/index.html
@@ -56,27 +56,27 @@
         <div class="container">
           <h2 class="visually-hidden">Нашi переваги</h2>
           <ul class="main-advantage">
-            <li>
+            <li class="main-advantage-list">
               <h3 class="main-advantage-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="main-advantage-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
-            <li>
+            <li class="main-advantage-list">
               <h3 class="main-advantage-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="main-advantage-text">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
-            <li>
+            <li class="main-advantage-list">
               <h3 class="main-advantage-title">ПЛАНУВАННЯ</h3>
               <p class="main-advantage-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li>
+            <li class="main-advantage-list">
               <h3 class="main-advantage-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="main-advantage-text">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -186,19 +186,19 @@
         >
         <address>
           <ul class="footer-list">
-            <li>
+            <li class="footer-list-list">
               <a
                 class="footer-address"
                 href="https://www.google.de/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+02000/@50.4265841,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru"
                 >м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
-            <li>
+            <li class="footer-list-list">
               <a class="footer-contact" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="footer-list-tel">
               <a class="footer-contact" href="tel:+380961111111"
                 >+38 096 111 11 11</a
               >
